--- a/ms-inventario/src/main/resources/application.properties
+++ b/ms-inventario/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=ms-inventario
+spring.datasource.url=jdbc:mysql://localhost:3306/toolrent_bd
+spring.datasource.username=root
+spring.datasource.password=18102002
+spring.jpa.hibernate.ddl-auto=none
+server.port=8081
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.security.oauth2.resourceserver.jwt.audiences=account
