--- a/ms-config-server/src/main/resources/application.properties
+++ b/ms-config-server/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+# Puerto típico del Config Server (convención: 8888)
+server.port=8888
+
+# Nombre lógico del microservicio (útil para logs/Eureka/Actuator)
 spring.application.name=ms-config-server
+
+# Backend de configuración: Git.
+# En este caso apuntamos a un repositorio LOCAL (filesystem) para desarrollo.
+# Dentro de config-repo se suelen crear archivos como:
+# - ms-clientes.properties (o .yml)
+# - ms-clientes-dev.properties
+# - application.properties (config global compartida)
+spring.cloud.config.server.git.uri=file://${user.dir}/../config-repo
+
+# Rama/tag/label por defecto para leer config (si el cliente no especifica label)
+spring.cloud.config.server.git.default-label=main
