--- a/ms-eureka-server/src/main/resources/application.properties
+++ b/ms-eureka-server/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=ms-eureka-server
+#conexion a config server
+spring.config.import=optional:configserver:http://localhost:8888
