-config de conexion a github de config server

--- a/ms-config-server/src/main/resources/application.properties
+++ b/ms-config-server/src/main/resources/application.properties
@@ -4,13 +4,23 @@ server.port=8888
 # Nombre lógico del microservicio (útil para logs/Eureka/Actuator)
 spring.application.name=ms-config-server
 
-# Backend de configuración: Git.
-# En este caso apuntamos a un repositorio LOCAL (filesystem) para desarrollo.
-# Dentro de config-repo se suelen crear archivos como:
-# - ms-clientes.properties (o .yml)
-# - ms-clientes-dev.properties
-# - application.properties (config global compartida)
-spring.cloud.config.server.git.uri=file://${user.dir}/../config-repo
+# Backend de configuración: Git (GitHub).
+# El Config Server clona este repo y sirve los archivos .properties/.yml por HTTP.
 
-# Rama/tag/label por defecto para leer config (si el cliente no especifica label)
+
+# URL del repo (https) en GitHub.
+spring.cloud.config.server.git.uri=${CONFIG_GIT_URI:}
+#Ruta(s) dentro del repo donde están los archivos de configuración.
+spring.cloud.config.server.git.search-paths=config-repo
+
+# Rama/tag/label por defecto que el Config Server usa si el cliente no especifica label.
 spring.cloud.config.server.git.default-label=main
+
+# (Opcional) Credenciales para repos privados.
+# Recomendado: username cualquiera (o el tuyo); password = token.
+spring.cloud.config.server.git.username=${GIT_USERNAME:}
+spring.cloud.config.server.git.password=${GIT_TOKEN:}
+
+# (Opcional) Clonado más robusto cuando hay updates frecuentes.
+spring.cloud.config.server.git.clone-on-start=true
+spring.cloud.config.server.git.force-pull=true
