--- a/ms-gateway/build.gradle
+++ b/ms-gateway/build.gradle
@@ -14,11 +14,30 @@ java {
 	}
 }
 
+ext {
+	//  esta es una versión estable conocida.
+	springCloudVersion = '2023.0.6'
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
+}
+
 repositories {
 	mavenCentral()
 }
 
 dependencies {
+	// 1. El Core del Gateway
+	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
+
+	// 2. Cliente Eureka (Para resolver lb://MS-FEES)
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+
+	// Testing
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
