--- a/ms-prestamos/Dockerfile
+++ b/ms-prestamos/Dockerfile
@@ -1,7 +1,7 @@
 FROM gradle:8.0.2-jdk17 AS build
 WORKDIR /app
 COPY . .
-RUN gradle build --no-daemon
+RUN gradle clean build -x test --no-daemon
 
 FROM eclipse-temurin:17-jre
 WORKDIR /app
