--- a/ms-prestamos/src/main/resources/application.yml
+++ b/ms-prestamos/src/main/resources/application.yml
@@ -1,29 +1,56 @@
 spring:
   application:
-    name: ms-prestamos
+    name: ms-loans
+
   datasource:
-    url: jdbc:mysql://${DB_HOST:localhost}:3306/toolrent_bd
-    username: root
-    password: 18102002
+    url: jdbc:mysql://${DB_HOST:localhost}:3306/toolrent_loans
+    username: ${DB_USER:root}
+    password: ${DB_PASSWORD:18102002}
+    driver-class-name:  com.mysql.cj.jdbc.Driver
+
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
       naming:
-        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+        physical-strategy:  org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    show-sql: true
+    properties:
+      hibernate:
+        dialect:  org.hibernate.dialect.MySQL8Dialect
+
   security:
     oauth2:
       resourceserver:
         jwt:
-          # audiences: account  # Comentado por no ser una propiedad estándar en Spring Boot; usar issuer-uri o jwk-set-uri si aplica
+          issuer-uri: ${KEYCLOAK_ISSUER_URI:http://localhost:8080/realms/toolrent}
 
 services:
   inventory:
-    url: http://localhost:8081/api/tools/
+    url: ${INVENTORY_URL:http://localhost:8081/api/tools/}
 
 server:
   port: 8082
 
 eureka:
   client:
-    serviceUrl:
+    service-url:
       defaultZone: ${EUREKA_URL:http://localhost:8761/eureka/}
+    register-with-eureka: true
+    fetch-registry: true
+  instance:
+    hostname: ms-loans
+    prefer-ip-address: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics
+  endpoint:
+    health:
+      show-details: always
+
+logging:
+  level:
+    root: INFO
+    com.proyectogradle: DEBUG
