--- a/kubernetes/05-gateway.yaml
+++ b/kubernetes/05-gateway.yaml
@@ -64,13 +64,6 @@ spec:
         - containerPort: 8080
 
 ---
-
-################################################################################
-# DOCUMENTO 2: Service (NodePort) para exponer el Gateway
-# NodePort abre un puerto en el nodo (minikube/node) para acceso desde fuera.
-################################################################################
-
-# Versión de API (Service está en core v1)
 apiVersion: v1
 
 # Tipo de recurso
@@ -89,7 +82,7 @@ spec:
     app: api-gateway
 
   # Tipo de Service: NodePort expone hacia fuera del cluster
-  type: NodePort
+  type: ClusterIP
 
   # Puertos del Service
   ports:
@@ -97,5 +90,3 @@ spec:
     - port: 8080
       # Puerto del contenedor al que se envía el tráfico
       targetPort: 8080
-      # Puerto fijo que se abre en el nodo (rango típico 30000-32767)
-      nodePort: 30000
