update ms-inventory properties

--- a/config-repo/ms-inventory.properties
+++ b/config-repo/ms-inventory.properties
@@ -13,3 +13,4 @@ eureka.instance.hostname=ms-inventory
 # Identificador único de la instancia en Eureka para diferenciar varias réplicas del mismo servicio
 # Utiliza el nombre de la app, un ID de instancia si existe, o un valor aleatorio por defecto
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+eureka.client.service-url.defaultZone=http://eureka-service:8761/eureka/
