--- a/ms-prestamos/src/main/resources/application.yml
+++ b/ms-prestamos/src/main/resources/application.yml
@@ -1,56 +1,26 @@
+server:
+  port: 0
+
 spring:
   application:
     name: ms-loans
-
   datasource:
-    url: jdbc:mysql://${DB_HOST:localhost}:3306/toolrent_loans
-    username: ${DB_USER:root}
-    password: ${DB_PASSWORD:18102002}
-    driver-class-name:  com.mysql.cj.jdbc.Driver
-
-  jpa:
-    hibernate:
-      ddl-auto: update
-      naming:
-        physical-strategy:  org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-    show-sql: true
-    properties:
-      hibernate:
-        dialect:  org.hibernate.dialect.MySQL8Dialect
-
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-          issuer-uri: ${KEYCLOAK_ISSUER_URI:http://localhost:8080/realms/toolrent}
-
-services:
-  inventory:
-    url: ${INVENTORY_URL:http://localhost:8081/api/tools/}
-
-server:
-  port: 8082
+    url: jdbc:mysql://${DB_HOST:localhost}:3306/toolrentdb
+    username: root
+    password: password
 
 eureka:
+  instance:
+    # ESTO ES LO QUE SOLUCIONA EL ERROR:
+    prefer-ip-address: false
+    hostname: ms-inventory
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
     service-url:
+      # Asegúrate de que esta variable coincida con tu ConfigMap (eureka-url)
       defaultZone: ${EUREKA_URL:http://localhost:8761/eureka/}
-    register-with-eureka: true
-    fetch-registry: true
-  instance:
-    hostname: ms-loans
-    prefer-ip-address: true
 
 management:
   endpoints:
     web:
       exposure:
-        include: health,info,metrics
-  endpoint:
-    health:
-      show-details: always
-
-logging:
-  level:
-    root: INFO
-    com.proyectogradle: DEBUG
