--- a/ms-prestamos/build.gradle
+++ b/ms-prestamos/build.gradle
@@ -33,7 +33,7 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
 	// Eureka Client (opcional, pero recomendado si usas discovery + @LoadBalanced)
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-
+	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	runtimeOnly 'com.h2database:h2' // add H2 for a simple in-memory DB during development
 	implementation 'mysql:mysql-connector-java:8.0.33'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
