--- a/config-repo/ms-customers.properties
+++ b/config-repo/ms-customers.properties
@@ -28,7 +28,7 @@ eureka.instance.hostname=ms-loans
 # Identificador único por instancia en Eureka (útil con varios pods):
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 # URL donde se encuentra el servidor Eureka:
-eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka/}
+eureka.client.service-url.defaultZone=${EUREKA_URL:http://eureka-service:8761/eureka/}
 
 #############################################################################
 # URL DEL SERVICIO INVENTORY (cómo ms-loans va a encontrar/llamar ms-inventory)
