--- a/ms-gateway/src/main/resources/application.yml
+++ b/ms-gateway/src/main/resources/application.yml
@@ -31,6 +31,21 @@ spring:
             - Path=/api/loans/**
           filters:
             - StripPrefix=1
+        # Ruta para MS-Customers
+        - id: ms-customers-route
+          uri: lb://ms-customers
+          predicates:
+            - Path=/api/customers/**
+        # Ruta para MS-Kardex
+        - id: ms-kardex-route
+          uri: lb://ms-kardex
+          predicates:
+            - Path=/api/kardex/**
+        # Ruta para MS-Fees
+        - id: ms-fees-route
+          uri: lb://ms-fees
+          predicates:
+            - Path=/api/fee/**
 
       # CONFIGURACIÓN CORS (CRUCIAL PARA EL FRONTEND)
       globalcors:
@@ -48,6 +63,6 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka/}
+      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://eureka-service:8761/eureka/}
     register-with-eureka: true
     fetch-registry: true
