--- a/ms-kardex/Dockerfile
+++ b/ms-kardex/Dockerfile
@@ -2,7 +2,7 @@
 FROM gradle:8.0.2-jdk17 AS build
 WORKDIR /app
 COPY . .
-RUN gradle build --no-daemon
+RUN gradle bootJar -x test --no-daemon
 
 FROM eclipse-temurin:17-jre
 WORKDIR /app
