--- a/ms-montos-y-tarifas/build.gradle
+++ b/ms-montos-y-tarifas/build.gradle
@@ -1,12 +1,12 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '4.0.0'
+	id 'org.springframework.boot' version '3.2.9'
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
 group = 'com.proyectogradle'
 version = '0.0.1-SNAPSHOT'
-description = 'ms-montos-y-tarifas'
+description = 'ms-fees'
 
 java {
 	toolchain {
@@ -17,14 +17,31 @@ java {
 repositories {
 	mavenCentral()
 }
+ext {
+	set('springCloudVersion', "2023.0.3")
+}
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
+	// Spring Boot Starters
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+	// Spring Cloud
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+	implementation 'org.springframework.cloud:spring-cloud-starter-config'
+	runtimeOnly 'com.mysql:mysql-connector-j'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
